<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">L06Form</string>
    <string name="action_settings">L06Form</string>
    <string name="hello_world">L06Form</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="sign_up">Sign Up</string>

    <string name="registro_usuario">Registro de Usuario</string>
    <string name="nombre">nombre</string>
    <string name="email">email</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="cpassword">Confirmar Password</string>
    <string name="registro">Registro</string>

</resources>
